# Bachelor

./: .gitignore  CMakeLists.txt  README.md
CutoutBoundingBox/: CMakeLists.txt  CutoutBoundingBox.cpp  CutoutBoundingBox.h  README.md  auswertung.py
DataPrepForPointNet/: CMakeLists.txt  DataPrepForPointNet.cpp  DataPrepForPointNet.h  augment_real_data.py  convertOBJtoPCD.py  test.h5  write_pyh5_real.py
HeaderFiles/: BaseHeader.h  morphsnakes.h  pcl-helpers.h  pclfuncs.h  variables.h
MorphSnakes/: CMakeLists.txt  MorphSnakes.cpp  MorphSnakes.h  data.pcd
MorphSnakes/output/GAC/: rs_chilli_sin_carne_start  rs_wurst_kartoffel_gemuese_dirty_start
RandLANet_RealSense/: README.md  helper_tool.py  main_RealSense.py
RandLANet_RealSense/utils/: 6_fold_classic.py  6_fold_cv.py  data_prepare_RealSense.py
